--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,98 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  outline: 0;
+  border: 0;
+  list-style: none;
+  text-decoration: none;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.screen.editable {
+  cursor: crosshair;
+}
+.leave-comment-text {
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 13px;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.text-box-container {
+  width: 300px;
+  transform: translateX(-50%) translateY(50px);
+}
+.text-box-container span {
+  position: absolute;
+  cursor: auto;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(calc(-100% - 10px));
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.text-box {
+  padding: 10px;
+  background-color: white;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
+}
+.text-box select {
+  border-radius: 5px;
+  text-align: center;
+  appearance: none;
+  padding: 5px 5px;
+  margin: 10px 0;
+  width: 100%;
+  background-color: var(--color);
+}
+.text-box textarea {
+  padding: 5px;
+  border-radius: 5px;
+  outline: 0.5px solid rgba(0, 0, 0, 0.637);
+  width: 100%;
+  resize: none;
+  max-width: 100%;
+  font-size: 12px;
+}
+.text-box textarea:focus {
+  outline: 0.5px solid rgba(0, 0, 0, 1);
+}
+.text-box .btn-add {
+  width: 100%;
+  background: #000;
+  color: #fff;
+  margin-top: 8px;
+  padding: 5px 0;
+  cursor: pointer;
+}
+.btn-add:disabled {
+  cursor: auto;
+  background: rgb(218, 218, 218);
+}
+.text-container {
+  width: 300px;
+  background: var(--color);
+  color: #fff;
+  transform: translate(-50%, 50px);
+}
+.text-container span {
+  background: var(--color);
+  cursor: auto;
+  transform: translateX(-50%) translateY(calc(-100% - 10px));
+  width: 40px;
+  height: 40px;
+  top: 0;
+  left: 50%;
+  position: absolute;
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.text-in {
+  padding: 10px;
 }
